full-moon/tests/cases/fail/parser/function-8/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/function-8
---
error[ast]: unexpected token `3`. 3 (expected name after `:`)
  ┌─ source.lua:1:15
  │
1 │ function name:3() end
  │               ^

error[ast]: unexpected token `3`. 3 (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:15
  │
1 │ function name:3() end
  │               ^

error[ast]: unexpected token `(`. ( (expected an expression after `(`)
  ┌─ source.lua:1:16
  │
1 │ function name:3() end
  │                ^

error[ast]: unexpected token `)`. ) (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:17
  │
1 │ function name:3() end
  │                 ^


